[package]
name = "supersonic-now-playing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "time"] }
eframe = { version = "0.27.2", features = ["glow"] }
zbus = { version = "3.15.2", default-features = false, features = ["blocking"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
